// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityItem renders compact with a single persona correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          align-items: center;
          color: #0078d4;
          display: flex;
          font-size: 13px;
          height: 16px;
          justify-content: center;
          line-height: 13px;
          margin-top: 1px;
          min-width: 16px;
          position: relative;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-bottom: 0;
          margin-left: -2px;
          margin-right: 0;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-Persona-imageArea {
          border: none;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: inline-flex;
            flex-basis: auto;
            flex-wrap: nowrap;
            height: 16px;
            min-width: 0;
            padding-right: 6px;
            width: auto;
          }
    >
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              min-width: 8px;
              overflow: visible;
              width: 8px;
            }
        role="presentation"
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #4F6BED;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 10px;
                  font-weight: 600;
                  height: 16px;
                  line-height: 16px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              TN
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders compact with an icon correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          align-items: center;
          color: #0078d4;
          display: flex;
          font-size: 13px;
          height: 16px;
          justify-content: center;
          line-height: 13px;
          margin-top: 1px;
          min-width: 16px;
          position: relative;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-bottom: 0;
          margin-left: -2px;
          margin-right: 0;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-Persona-imageArea {
          border: none;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: inline-block;
            font-family: "FabricMDL2Icons-2";
            font-style: normal;
            font-weight: normal;
            speak: none;
          }
      data-icon-name="Message"
    >
      
    </i>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders compact with animation correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        animation-duration: .5s;
        animation-iteration-count: 1;
        animation-name: keyframes from{opacity:0;}to{opacity:1;};
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          align-items: center;
          color: #0078d4;
          display: flex;
          font-size: 13px;
          height: 16px;
          justify-content: center;
          line-height: 13px;
          margin-top: 1px;
          min-width: 16px;
          position: relative;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-bottom: 0;
          margin-left: -2px;
          margin-right: 0;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-Persona-imageArea {
          border: none;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
        }
  >
    <div
      className=
          ms-ActivityItem-pulsingBeacon
          {
            animation-duration: .8s;
            animation-iteration-count: 1;
            animation-name: keyframes 0%{border-color:#0078d4;border-width:0px;width:4px;height:4px;}14.2%{opacity:1;border-width:4px;}35.7%{opacity:1;}71.4%{border-width:0;width:28px;height:28px;opacity:0;border-color:#71afe5;}100%{};
            border-radius: 225px;
            border-style: solid;
            height: 0px;
            left: 50%;
            opacity: 0;
            position: absolute;
            top: 50%;
            transform: translate(-50%, -50%);
            width: 0px;
            z-index: 1;
          }
    />
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: inline-flex;
            flex-basis: auto;
            flex-wrap: nowrap;
            height: 16px;
            min-width: 0;
            padding-right: 6px;
            width: auto;
          }
    >
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              min-width: 8px;
              overflow: visible;
              width: 8px;
            }
        role="presentation"
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #4F6BED;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 10px;
                  font-weight: 600;
                  height: 16px;
                  line-height: 16px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              TN
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          animation-duration: .5s;
          animation-iteration-count: 1;
          animation-name: keyframes from{transform:translateX(-10px);}to{transform:translateX(0);};
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders compact with multiple personas correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          align-items: center;
          color: #0078d4;
          display: flex;
          font-size: 13px;
          height: 16px;
          justify-content: center;
          line-height: 13px;
          margin-top: 1px;
          min-width: 16px;
          position: relative;
        }
        & .ms-Persona-imageArea {
          border-radius: 50%;
          border: 2px solid#ffffff;
          margin-bottom: 0;
          margin-left: -2px;
          margin-right: 0;
          margin-top: -2px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& .ms-Persona-imageArea {
          border: none;
          margin-bottom: 0;
          margin-left: 0;
          margin-right: 0;
          margin-top: 0;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: inline-flex;
            flex-basis: auto;
            flex-wrap: nowrap;
            height: 16px;
            min-width: 0;
            padding-right: 6px;
            width: auto;
          }
    >
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              min-width: 8px;
              overflow: visible;
              width: 8px;
            }
        role="presentation"
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #4F6BED;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 10px;
                  font-weight: 600;
                  height: 16px;
                  line-height: 16px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              TN
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              min-width: 8px;
              overflow: visible;
              width: 8px;
            }
        role="presentation"
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border-radius: 50%;
                  border: 0px;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  height: 16px;
                  left: 0px;
                  margin-right: 10px;
                  overflow: hidden;
                  perspective: 1px;
                  position: absolute;
                  top: 0px;
                  width: 16px;
                }
            style={
              Object {
                "height": 16,
                "width": 16,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: 100%;
                    object-fit: cover;
                    opacity: 0;
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/persona-female.png"
            />
          </div>
        </div>
      </div>
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: inline-block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              min-width: 8px;
              overflow: visible;
              width: 8px;
            }
        role="presentation"
        style={
          Object {
            "display": "inline-block",
            "minWidth": "10px",
            "overflow": "visible",
            "width": "10px",
          }
        }
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #D13438;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 10px;
                  font-weight: 600;
                  height: 16px;
                  line-height: 16px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              AN
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          flex: 1;
          overflow-x: hidden;
          padding-bottom: 0;
          padding-left: 4px;
          padding-right: 4px;
          padding-top: 0;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
  </div>
</div>
`;

exports[`ActivityItem renders with a single persona correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: flex-start;
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          font-size: 16px;
          height: 32px;
          line-height: 16px;
          margin-top: 3px;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: flex;
            flex-wrap: wrap;
            height: 32px;
            min-width: 32px;
            width: 32px;
          }
    >
      <div
        className=
            ms-Persona-coin
            ms-Persona--size32
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
        role="presentation"
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 32px;
                position: relative;
                text-align: center;
                width: 32px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #4F6BED;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 14px;
                  font-weight: 600;
                  height: 32px;
                  line-height: 32px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              TN
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
    <div
      className=
          ms-ActivityItem-commentText
          {
            color: #323130;
          }
    >
      <span>
        comment text
      </span>
    </div>
    <div
      className=
          ms-ActivityItem-timeStamp
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #605e5c;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 10px;
            font-weight: 400;
          }
    >
      timestamp text
    </div>
  </div>
</div>
`;

exports[`ActivityItem renders with an icon correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: flex-start;
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          font-size: 16px;
          height: 32px;
          line-height: 16px;
          margin-top: 3px;
        }
  >
    <i
      aria-hidden={true}
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: inline-block;
            font-family: "FabricMDL2Icons-2";
            font-style: normal;
            font-weight: normal;
            speak: none;
          }
      data-icon-name="Message"
    >
      
    </i>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
    <div
      className=
          ms-ActivityItem-commentText
          {
            color: #323130;
          }
    >
      <span>
        comment text
      </span>
    </div>
    <div
      className=
          ms-ActivityItem-timeStamp
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #605e5c;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 10px;
            font-weight: 400;
          }
    >
      timestamp text
    </div>
  </div>
</div>
`;

exports[`ActivityItem renders with multiple personas correctly 1`] = `
<div
  className=
      ms-ActivityItem
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: flex-start;
        box-sizing: border-box;
        color: #605e5c;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 12px;
        font-weight: 400;
        justify-content: flex-start;
      }
>
  <div
    className=
        ms-ActivityItem-activityTypeIcon
        {
          font-size: 16px;
          height: 32px;
          line-height: 16px;
          margin-top: 3px;
        }
  >
    <div
      className=
          ms-ActivityItem-personaContainer
          {
            display: flex;
            flex-wrap: wrap;
            height: 32px;
            min-width: 32px;
            width: 32px;
          }
    >
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
        role="presentation"
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #4F6BED;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 10px;
                  font-weight: 600;
                  height: 16px;
                  line-height: 16px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              TN
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
        role="presentation"
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border-radius: 50%;
                  border: 0px;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  height: 16px;
                  left: 0px;
                  margin-right: 10px;
                  overflow: hidden;
                  perspective: 1px;
                  position: absolute;
                  top: 0px;
                  width: 16px;
                }
            style={
              Object {
                "height": 16,
                "width": 16,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: 100%;
                    object-fit: cover;
                    opacity: 0;
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/persona-female.png"
            />
          </div>
        </div>
      </div>
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
        role="presentation"
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            aria-hidden="true"
            className=
                ms-Persona-initials
                {
                  background-color: #D13438;
                  border-radius: 50%;
                  color: #ffffff;
                  font-size: 10px;
                  font-weight: 600;
                  height: 16px;
                  line-height: 16px;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                  -ms-high-contrast-adjust: none;
                  background-color: Window !important;
                  border: 1px solid WindowText;
                  box-sizing: border-box;
                  color: WindowText;
                  forced-color-adjust: none;
                }
                & i {
                  font-weight: 600;
                }
          >
            <span>
              AN
            </span>
          </div>
        </div>
      </div>
      <div
        className=
            ms-Persona-coin
            ms-Persona--size16
            ms-ActivityItem-activityPersona
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
        role="presentation"
      >
        <div
          className=
              ms-Persona-imageArea
              {
                flex: 0 0 auto;
                height: 16px;
                position: relative;
                text-align: center;
                width: 16px;
              }
          role="presentation"
        >
          <div
            className=
                ms-Image
                ms-Persona-image
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  border-radius: 50%;
                  border: 0px;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  height: 16px;
                  left: 0px;
                  margin-right: 10px;
                  overflow: hidden;
                  perspective: 1px;
                  position: absolute;
                  top: 0px;
                  width: 16px;
                }
            style={
              Object {
                "height": 16,
                "width": 16,
              }
            }
          >
            <img
              alt=""
              className=
                  ms-Image-image
                  ms-Image-image--cover
                  ms-Image-image--portrait
                  is-notLoaded
                  is-fadeIn
                  {
                    display: block;
                    height: 100%;
                    object-fit: cover;
                    opacity: 0;
                    width: 100%;
                  }
              onError={[Function]}
              onLoad={[Function]}
              src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/persona-male.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-ActivityItem-activityContent
        {
          padding-bottom: 0;
          padding-left: 8px;
          padding-right: 8px;
          padding-top: 0;
        }
  >
    <span
      className=
          ms-ActivityItem-activityText
          {
            display: inline;
          }
    >
      <span>
        description text
      </span>
    </span>
    <div
      className=
          ms-ActivityItem-commentText
          {
            color: #323130;
          }
    >
      <span>
        comment text
      </span>
    </div>
    <div
      className=
          ms-ActivityItem-timeStamp
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #605e5c;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 10px;
            font-weight: 400;
          }
    >
      timestamp text
    </div>
  </div>
</div>
`;
